@@ -1140,6 +1140,7 @@ Localization
         #LOC_BDArmory_Icon_pointers = Offscreen Icon Pointers
         #LOC_BDArmory_Icon_scale = Icon Scale:
         #LOC_BDArmory_Icon_distance_threshold = Distance Threshold:
+        #LOC_BDArmory_Icon_max_distance_threshold = Max Distance Threshold:
         #LOC_BDArmory_Icon_telemetry = Enable Telemetry;
         #LOC_BDArmory_Icon_colorget = Apply
 
