@@ -20,5 +20,6 @@ namespace BDArmory.Settings
 		[SettingsDataField] public static bool TELEMETRY = false;
 		[SettingsDataField] public static float ICONSCALE = 1.0f;
 		[SettingsDataField] public static float DISTANCE_THRESHOLD = 100f;
+		[SettingsDataField] public static float MAX_DISTANCE_THRESHOLD = 0f;
 	}
 }
